--- a/indx.html
+++ b/indx.html
@@ -1140,7 +1140,7 @@ margin: 1vh auto 1vh auto;
 }
 }
 </style>
-<a href="https://go.perfectpay.com.br/PPU38COGS3P" target="_self" class="btn button-YbDHvt5515269-element " rel="noopener">
+<a href="https://go.perfectpay.com.br/PPU38COA4BR" target="_self" class="btn button-YbDHvt5515269-element " rel="noopener">
 SELECIONAR PLANO
 </a>
 </div>
