--- a/index.html
+++ b/index.html
@@ -1215,7 +1215,7 @@ margin: 1vh auto 1vh auto;
 }
 }
 </style>
-<a href="https://grand-rugelach-f419d0.netlify.app/" target="_self" class="btn button-YbDHvt5515268-element " rel="noopener">
+<a href="https://go.perfectpay.com.br/PPU38COGS3P" target="_self" class="btn button-YbDHvt5515268-element " rel="noopener">
 AVALIAR GRATIS
 </a>
 </div>
